--- a/valentine-surprise.html
+++ b/valentine-surprise.html
@@ -60,6 +60,10 @@
     </style>
 </head>
 <body>
+    <audio autoplay loop>
+    <source src="https://cdn.jsdelivr.net/gh/angelolumague/ilovemygirlfriendsomuch/love-song.mp3" type="audio/mpeg">
+</audio>
+
     <div class="container text-center">
         <h1 class="header_text">Hurrayyyy!!</h1>
         <div class="gif_container">
