--- a/love-story.html
+++ b/love-story.html
@@ -48,9 +48,10 @@
     </style>
 </head>
 <body>
-    <audio autoplay loop>
-        <source src="love-song.mp3" type="audio/mpeg">
-    </audio>
+<audio autoplay loop>
+    <source src="https://cdn.jsdelivr.net/gh/angelolumague/ilovemygirlfriendsomuch/love-song.mp3" type="audio/mpeg">
+</audio>
+
     <div class="container text-center">
         <h1>💕 Our Love Album 💕</h1>
         
