--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             align-items: center;
             margin-top: 20px;
             position: relative;
+            gap: 15px; /* Ensures spacing between buttons */
         }
 
         .btn {
@@ -56,7 +57,6 @@
             text-align: center;
             display: inline-block;
             font-size: 16px;
-            margin: 4px 10px;
             cursor: pointer;
             border: none;
             border-radius: 12px;
@@ -68,14 +68,13 @@
         }
 
         #noButton {
-            position: absolute;
             transition: 0.5s;
             background-color: #ffb6c1;
             color: #ff1493;
         }
 
-        /* Responsive Fix */
-        @media only screen and (max-width: 414px) {
+        /* Fix layout on small screens */
+        @media only screen and (max-width: 480px) {
             .container {
                 max-width: 90%;
             }
@@ -84,13 +83,16 @@
             }
             .buttons {
                 flex-direction: column;
-                gap: 10px; /* Adds spacing between buttons */
+                gap: 10px; /* Adds space between buttons */
             }
             .btn {
                 width: 100%;
-                max-width: 200px; /* Prevents buttons from being too wide */
+                max-width: 200px;
                 padding: 10px 20px;
                 font-size: 14px;
+            }
+            #noButton {
+                position: relative; /* Remove absolute positioning */
             }
         }
     </style>
@@ -114,10 +116,18 @@
         }
         
         function moveButton() {
-            var x = Math.random() * (window.innerWidth - document.getElementById('noButton').offsetWidth) - 85;
-            var y = Math.random() * (window.innerHeight - document.getElementById('noButton').offsetHeight) - 48;
-            document.getElementById('noButton').style.left = `${x}px`;
-            document.getElementById('noButton').style.top = `${y}px`;
+            var btn = document.getElementById('noButton');
+
+            // Prevent button movement on small screens
+            if (window.innerWidth <= 480) {
+                return;
+            }
+
+            var x = Math.random() * (window.innerWidth - btn.offsetWidth) - 85;
+            var y = Math.random() * (window.innerHeight - btn.offsetHeight) - 48;
+            btn.style.position = "absolute";
+            btn.style.left = `${x}px`;
+            btn.style.top = `${y}px`;
         }
     </script>
 </body> 
