--- a/too-early.html
+++ b/too-early.html
@@ -3,81 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patience, My Wabii!</title>
-    
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <title>Too Early!</title>
     <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #ffe6f2;
-            font-family: 'Comic Sans MS', cursive, sans-serif;
+            background-color: #ffdde1;
+            font-family: 'Nunito', sans-serif;
             text-align: center;
             margin: 0;
         }
-
         .container {
             background: white;
             padding: 30px;
-            border-radius: 15px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-            max-width: 450px;
+            border-radius: 20px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            max-width: 400px;
         }
-
-        h1 {
-            color: #ff1493;
-            font-size: 24px;
+        .header_text {
+            font-size: 26px;
             font-weight: bold;
+            color: #ff1493;
+            margin-bottom: 10px;
         }
-
-        p {
-            color: #ff69b4;
+        .gif_container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 15px 0;
+        }
+        .message {
             font-size: 18px;
-        }
-
-        .heart {
-            font-size: 50px;
-            color: red;
-            animation: heartbeat 1.5s infinite;
-        }
-
-        @keyframes heartbeat {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-            100% { transform: scale(1); }
-        }
-
-        .btn-custom {
-            background-color: #ff69b4;
-            color: white;
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            border-radius: 10px;
-            transition: background-color 0.3s ease;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 10px;
-        }
-
-        .btn-custom:hover {
-            background-color: #ff1493;
+            color: #333;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>I know you, my Wabii! ❤️</h1>
-        <p>I know that you'll try to open this even though it's not Valentine's yet. <br>  
-        But please, Wabi, have patience, oki? 😘<br>  
-        I love you always, my Wabii! 💕</p>
-        <div class="heart">❤️</div>
-        <br>
-        <a href="index.html" class="btn-custom">Okay, I'll wait 💖</a>
+        <h1 class="header_text">Not yet, my wabii!</h1>
+        <div class="gif_container">
+            <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute animated illustration">
+        </div>
+        <p class="message">I know you, my wabii. I know you’ll try to click this even though it’s not Valentine's yet! But please, have patience, okay? I love you always!</p>
     </div>
 </body>
 </html>
+
