--- a/too-early.html
+++ b/too-early.html
@@ -14,16 +14,18 @@
             font-family: 'Nunito', sans-serif;
             text-align: center;
             margin: 0;
+            padding: 20px;
         }
         .container {
             background: white;
-            padding: 30px;
+            padding: 25px;
             border-radius: 20px;
             box-shadow: 0 4px 10px rgba(0,0,0,0.3);
             max-width: 400px;
+            width: 100%;
         }
         .header_text {
-            font-size: 26px;
+            font-size: 24px;
             font-weight: bold;
             color: #ff1493;
             margin-bottom: 10px;
@@ -34,9 +36,29 @@
             align-items: center;
             margin: 15px 0;
         }
+        .gif_container img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
         .message {
-            font-size: 18px;
+            font-size: 16px;
             color: #333;
+            line-height: 1.4;
+            padding: 0 10px;
+        }
+
+        /* Responsive Design */
+        @media only screen and (max-width: 480px) {
+            .header_text {
+                font-size: 22px;
+            }
+            .message {
+                font-size: 14px;
+            }
+            .container {
+                padding: 20px;
+            }
         }
     </style>
 </head>
@@ -46,8 +68,10 @@
         <div class="gif_container">
             <img src="https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExcDdtZ2JiZDR0a3lvMWF4OG8yc3p6Ymdvd3g2d245amdveDhyYmx6eCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/cLS1cfxvGOPVpf9g3y/giphy.gif" alt="Cute animated illustration">
         </div>
-        <p class="message">I know you, my wabii. I know you’ll try to click this even though it’s not Valentine's yet! But please, have patience, okay? I love you always!</p>
+        <p class="message">
+            I know you, my wabii. I know you’ll try to click this even though it’s not Valentine's yet!  
+            But please, have patience, okay? I love you always!
+        </p>
     </div>
 </body>
 </html>
-
