--- a/love-story.html
+++ b/love-story.html
@@ -99,10 +99,16 @@
             
             <!-- Adding videos -->
             <video class="slide img-fluid" controls>
-                <source src="video1.mp4" type="video/mp4">
+                <source src="40.mp4" type="video/mp4">
             </video>
             <video class="slide img-fluid" controls>
-                <source src="video2.mp4" type="video/mp4">
+                <source src="41.mp4" type="video/mp4">
+            </video>
+            <video class="slide img-fluid" controls>
+                <source src="42.mp4" type="video/mp4">
+            </video>
+            <video class="slide img-fluid" controls>
+                <source src="43.mp4" type="video/mp4">
             </video>
         </div>
         
