--- a/love-story.html
+++ b/love-story.html
@@ -53,7 +53,7 @@
 </audio>
 
     <div class="container text-center">
-        <h1>💕 Our Love Album 💕</h1>
+        <h1>💕 Us, through the years 💕</h1>
         
         <div class="slideshow-container">
             <!-- Adding all 39 images -->
